# adsyncd

./: .gitignore  LICENSE  LinuxUsers.py  README.md  UserDefinedHooks.py  __init__.py  adsync  adsync.go  adsyncd.py  adsyncdServiceWin.py  build-linux.sh  config.cfg  config.json.example  go.mod  go.sum  main-linux.go  main.py  stuff
AzureAD/: AzureAD.go  __init__.py
AzureSyncHandler/: __init__.py
LinuxUsers/: __init__.py
SyncHandler/: UserSyncHandler.go
SystemUserAdmin/: SystemUserAdmin.go
SystemUserAdmin/Linux/: Linux.go
SystemUserAdmin/Windows/: Windows.go
UserAdministration/: __init__.py
WindowsUsers/: __init__.py
azuread/: azuread.go
config/: config.go  linux-config.go  windows-config.go
lib/charset_normalizer-2.1.1.dist-info/: RECORD
lib/docutils-0.19.dist-info/: RECORD
src/adsyncd_xpertnova/: LICENSE  pyproject.toml
src/adsyncd_xpertnova/AzureAD/: __init__.py
src/adsyncd_xpertnova/LinuxUsers/: __init__.py
src/adsyncd_xpertnova/adsyncd_xpertnova.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/adsyncd_xpertnova/main/: __init__.py
sysusers/: sysusers-linux.go  sysusers-windows.go  sysusers.go
