[project]
name = "adsyncd_xpertnova"
version = "0.0.1"
authors  = [
    {name = "Lovis König", email = "lovis.koenig@xpertnova.de"},
]
description = "Synchronizes Azure AD users with a local Linux (or POSIX compatible) machine. Should not be used on important systems. Only use on VMs that require multi-user multi-session RDP!"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Not licensed",
    "Operating System :: Linux",
]
dependencies = [
    "requests >= 2.28.1",
    "schedule >= 1.1.0",
    "logging >= 0.4.9.6",
    "configparser >= 5.3.0",
    "simplejson >= 3.18.0",
    "python-daemon >= 2.3.2"
]

[tool.setuptools]
packages = ["AzureAD", "LinuxUsers", "main", "UserAdministration"]